# SortMPI

./: .travis.yml  CMakeLists.txt  ReadMe.md  main.cpp
CMake/: DownloadProject.CMakeLists.cmake.in
example/: CMakeLists.txt  merge_sort_example.cpp
inc/: merge_sort.h  sort.h
test/: CMakeLists.txt  test_merge_sort.cpp
